fixes displaying play icon on Safari mobile

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body.hidden {
 }
 
 .title {
+  display: flex;
   font-size: 7rem;
 
   a {
@@ -27,7 +28,7 @@ body.hidden {
     text-decoration: none;
   }
 
-  img {
+  .play {
     height: 7rem;
     margin-right: 0.4rem;
     vertical-align: sub;
